Fix Bug #18880 Ranking Rule - Schedule date picker is not well aligned.

--- a/searchManager/src/main/webapp/js/jquery/plugin.custom/statbox/1.0/jquery.statbox.custom.css
+++ b/searchManager/src/main/webapp/js/jquery/plugin.custom/statbox/1.0/jquery.statbox.custom.css
@@ -36,7 +36,7 @@
 	height: 100%;
 }
 
-.hasDatepicker {
+.plugin-statbox .hasDatepicker {
 	width: 79px;
 	font-size: 12px;
 	text-align: center;
